# ImgCompress

./: README.md  pyproject.toml  test_core.py
imgcompress/: core.py
