[project]
name = "imgcompress"
version = "1.1.0"
description = "Compress images automatically before storage — function, decorator, or middleware. Framework-agnostic."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["Pillow"]
keywords = ["image", "compress", "upload", "fastapi", "middleware", "pillow"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Multimedia :: Graphics",
]

[project.optional-dependencies]
fastapi = ["starlette", "python-multipart"]
heif = ["pillow-heif"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["imgcompress*"]
